--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.21.7",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "@vitejs/plugin-react": "^2.0.0",
     "sass": "^1.54.0",
     "typescript": "^4.6.4",
-    "vite": "^3.0.0"
+    "vite": "^3.0.0",
+    "vite-plugin-imp": "^2.2.0"
   }
 }
