--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.21.7",
+    "less": "^4.1.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,7 +21,6 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
-    "sass": "^1.54.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vite-plugin-imp": "^2.2.0"
