--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@manaflair/redux-batch": "^1.0.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "antd": "^4.21.7",
     "axios": "^0.27.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
@@ -29,6 +33,7 @@
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "@vitejs/plugin-react": "^2.0.0",
@@ -49,7 +54,7 @@
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard": "^26.0.0",
     "stylelint-less": "^1.0.6",
-    "typescript": "^4.6.4",
+    "typescript": "^4.7.4",
     "vite": "^3.0.0",
     "vite-plugin-eslint": "^1.7.0",
     "vite-plugin-imp": "^2.2.0"
