--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@manaflair/redux-batch": "^1.0.0",
     "@reduxjs/toolkit": "^1.8.3",
+    "ahooks": "^3.7.0",
     "antd": "^4.21.7",
     "axios": "^0.27.2",
     "normalize.css": "^8.0.1",
