--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
     "stylelint-less": "^1.0.6",
     "typescript": "^4.7.4",
     "vite": "^3.0.0",
-    "vite-plugin-eslint": "^1.7.0",
-    "vite-plugin-imp": "^2.2.0"
+    "vite-plugin-eslint": "^1.7.0"
   },
   "config": {
     "commitizen": {
