--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,8 @@
 # 本地环境接口地址
-VITE_API_URL = 'http://localhost:3001/'
+# VITE_API_URL = 'http://localhost:3001/'
 # VITE_API_URL = 'http://123.207.32.32:9001/'
 # VITE_API_URL = 'https://music-sunsir996.vercel.app/'
 # VITE_API_URL = 'http://zhoup.top:7003/'
+# 这个是自己部署的
+VITE_API_URL = 'https://netease-cloud-music-api-red-two.vercel.app/'
+# VITE_API_URL = 'http://cloud-music.pl-fe.cn/'
