--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 
 # 线上环境接口地址
-VITE_API_URL = 'http://cloud-music.pl-fe.cn/'
+VITE_API_URL = 'https://netease-cloud-music-api-crete722p-hannah-bingo.vercel.app/'
