--- a/package.json
+++ b/package.json
@@ -27,20 +27,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.4",
-    "react-transition-group": "^4.4.5",
-    "redux-logger": "^3.0.6"
+    "react-router-dom": "^6.4.5",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@antfu/eslint-config-react": "^0.33.1",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
-    "@types/node": "^18.11.11",
+    "@types/node": "^18.11.12",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-transition-group": "^4.4.5",
-    "@types/redux-logger": "^3.0.9",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react-swc": "^3.0.0",
     "commitizen": "^4.2.6",
     "cz-git": "^1.4.0",
     "eslint": "^8.29.0",
@@ -50,14 +48,14 @@
     "less": "^4.1.3",
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.19",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.1",
     "stylelint": "^14.16.0",
-    "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard": "^26.0.0",
     "stylelint-less": "^1.0.6",
-    "typescript": "^4.9.3",
-    "vite": "^3.2.5"
+    "typescript": "^4.9.4",
+    "unplugin-auto-import": "^0.12.0",
+    "vite": "4.0.0"
   },
   "config": {
     "commitizen": {
